[#17232] Adjust DisasWrapper to the new libLLVM

--- a/src/Emulator/LLVMDisassembler/LLVMDisassembler.csproj
+++ b/src/Emulator/LLVMDisassembler/LLVMDisassembler.csproj
@@ -67,12 +67,9 @@
     </MonoDevelop>
   </ProjectExtensions>
   <ItemGroup>
-    <None Include="..\..\..\..\..\lib\resources\llvm\32_libLLVM.dll" />
-    <None Include="..\..\..\..\..\lib\resources\llvm\64_libLLVM.dll" />
-    <None Include="..\..\..\..\..\lib\resources\llvm\32_libLLVM-3.4.so" />
-    <None Include="..\..\..\..\..\lib\resources\llvm\64_libLLVM-3.4.so" />
-    <None Include="..\..\..\..\..\lib\resources\llvm\32_libLLVM.dylib" />
-    <None Include="..\..\..\..\..\lib\resources\llvm\64_libLLVM.dylib" />
+    <None Include="..\..\..\..\..\lib\resources\llvm\libllvm-disas.dll" />
+    <None Include="..\..\..\..\..\lib\resources\llvm\libllvm-disas.so" />
+    <None Include="..\..\..\..\..\lib\resources\llvm\libllvm-disas.dylib" />
   </ItemGroup>
   <UsingTask AssemblyFile="$(MSBuildProjectDirectory)/../../../../../lib/cctask/CCTask/bin/Release/CCTask.dll" TaskName="EnvironmentTask" />
   <Target Name="CopySharedLibraries" AfterTargets="Build">
@@ -80,8 +77,7 @@
         <Extension Condition=" '$(CurrentPlatform)' == 'Windows'">dll</Extension>
         <Extension Condition=" '$(CurrentPlatform)' == 'Linux'"  >so</Extension>
         <Extension Condition=" '$(CurrentPlatform)' == 'OSX'"    >dylib</Extension>
-        <Suffix    Condition=" '$(CurrentPlatform)' == 'Linux'"  >-3.4</Suffix>
     </PropertyGroup>
-    <Copy SourceFiles="..\..\..\..\..\lib\resources\llvm\64_libLLVM$(Suffix).$(Extension)" DestinationFiles="$(OutputPath)\libLLVM.$(Extension)" Condition="Exists('..\..\..\..\..\lib\resources\llvm\64_libLLVM$(Suffix).$(Extension)')" />
+    <Copy SourceFiles="..\..\..\..\..\lib\resources\llvm\libllvm-disas.$(Extension)" DestinationFiles="$(OutputPath)\libllvm-disas.$(Extension)" Condition="Exists('..\..\..\..\..\lib\resources\llvm\libllvm-disas.$(Extension)')" />
   </Target>
 </Project>
