[#16503] Add EOS S3 ADC model

--- a/src/Emulator/Peripherals/Peripherals.csproj
+++ b/src/Emulator/Peripherals/Peripherals.csproj
@@ -307,6 +307,7 @@
     <Compile Include="Peripherals\Miscellaneous\LiteX_SoC_Controller.cs" />
     <Compile Include="Peripherals\SPI\EOSS3_SPIMaster.cs" />
     <Compile Include="Peripherals\Miscellaneous\LiteX_MMCM.cs" />
+    <Compile Include="Peripherals\Analog\EOSS3_ADC.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ProjectExtensions>
