[GH#12] cores: Parameterize ArPath
The linker and the compiler paths are both parameterized as LinkerPath
and CompilerPath already.  This allows for them to be placed in a
nonstandard location, or even outside of the path entirely.

Note that with this change, users must re-sync the properties file, or
manually add ArPath.

Signed-off-by: Sean Cross <sean@xobs.io>

--- a/src/Emulator/Cores/osx-properties.csproj
+++ b/src/Emulator/Cores/osx-properties.csproj
@@ -3,6 +3,7 @@
 <PropertyGroup>
   <CompilerPath>/usr/bin/clang</CompilerPath>
   <LinkerPath>/usr/bin/clang</LinkerPath>
+  <ArPath>/usr/bin/ar</ArPath>
   <CurrentPlatform>OSX</CurrentPlatform>
   <DefineConstants>$(DefineConstants);PLATFORM_OSX</DefineConstants>
 </PropertyGroup>
