--- a/src/Emulator/Cores/windows-properties.csproj
+++ b/src/Emulator/Cores/windows-properties.csproj
@@ -3,6 +3,7 @@
 <PropertyGroup>
   <CompilerPath>gcc</CompilerPath>
   <LinkerPath>gcc</LinkerPath>
+  <ArPath>ar</ArPath>
   <CurrentPlatform>Windows</CurrentPlatform>
   <DefineConstants>$(DefineConstants);PLATFORM_WINDOWS</DefineConstants>
 </PropertyGroup>
