--- a/src/Emulator/Cores/linux-properties.csproj
+++ b/src/Emulator/Cores/linux-properties.csproj
@@ -3,6 +3,7 @@
 <PropertyGroup>
   <CompilerPath>/usr/bin/gcc</CompilerPath>
   <LinkerPath>/usr/bin/gcc</LinkerPath>
+  <ArPath>/usr/bin/ar</ArPath>
   <CurrentPlatform>Linux</CurrentPlatform>
   <DefineConstants>$(DefineConstants);PLATFORM_LINUX</DefineConstants>
 </PropertyGroup>
