--- a/src/Emulator/Main/Emulator.csproj
+++ b/src/Emulator/Main/Emulator.csproj
@@ -366,7 +366,6 @@
     <Compile Include="Utilities\CustomDateTime.cs" />
     <Compile Include="Utilities\LRUCache.cs" />
     <Compile Include="Utilities\Collections\FastReadConcurrentCollection.cs" />
-    <Compile Include="Utilities\LibStdCppHelper.cs" />
     <Compile Include="Utilities\Collections\TwoWayDictionary.cs" />
     <Compile Include="Utilities\WeakWrapper.cs" />
     <Compile Include="Utilities\Collections\CircularBuffer.cs" />
@@ -524,6 +523,10 @@
     <ProjectReference Include="..\..\..\..\..\lib\Packet.Net\PacketDotNet\PacketDotNet.csproj">
       <Project>{55ABBA4C-AAF9-4726-A592-0C92436CEC92}</Project>
       <Name>PacketDotNet</Name>
+    </ProjectReference>
+      <ProjectReference Include="..\..\..\..\..\lib\CxxDemangler\CxxDemangler\CxxDemangler.csproj">
+      <Project>{3A70B9B8-BBAB-47EA-8473-B7A0B4961D56}</Project>
+      <Name>CxxDemangler</Name>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
