--- a/src/Emulator/Main/Emulator.csproj
+++ b/src/Emulator/Main/Emulator.csproj
@@ -74,6 +74,8 @@
   </ItemGroup>
   <ItemGroup Condition="$(CurrentPlatform) != 'Windows'">
     <Reference Include="Mono.Posix" />
+  </ItemGroup>
+  <ItemGroup Condition=" $(CurrentPlatform) != Windows And $(GUI_DISABLED) != 'true' ">
     <Reference Include="gdk-sharp, Version=2.12.0.0, Culture=neutral, PublicKeyToken=35e10195dab3c99f">
       <Package>gdk-sharp-2.0</Package>
     </Reference>
