--- a/src/UI/UI.csproj
+++ b/src/UI/UI.csproj
@@ -33,7 +33,7 @@
     <WarningLevel>4</WarningLevel>
     <Externalconsole>true</Externalconsole>
   </PropertyGroup>
-  <PropertyGroup Condition= " $(GUI_DISABLED) == 'true' ">
+  <PropertyGroup Condition=" $(GUI_DISABLED) == 'true' ">
     <DefineConstants>$(DefineConstants);GUI_DISABLED</DefineConstants>
   </PropertyGroup>
   <ItemGroup>
@@ -45,6 +45,8 @@
   </ItemGroup>
   <ItemGroup Condition=" $(CurrentPlatform) != 'Windows'">
     <Reference Include="Mono.Posix" />
+  </ItemGroup>
+  <ItemGroup Condition=" $(CurrentPlatform) != Windows And $(GUI_DISABLED) != 'true' ">
     <Reference Include="gdk-sharp, Version=2.12.0.0, Culture=neutral, PublicKeyToken=35e10195dab3c99f">
       <Package>gtk-sharp-2.0</Package>
     </Reference>
