[#16501] Add EOS S3 Flexible Fusion Engine Wishbone interface

--- a/src/Emulator/Peripherals/Peripherals.csproj
+++ b/src/Emulator/Peripherals/Peripherals.csproj
@@ -310,6 +310,7 @@
     <Compile Include="Peripherals\Analog\EOSS3_ADC.cs" />
     <Compile Include="Peripherals\DMA\EOSS3_SPI_DMA.cs" />
     <Compile Include="Peripherals\Miscellaneous\EOSS3_PacketFIFO.cs" />
+    <Compile Include="Peripherals\Miscellaneous\EOSS3_FlexibleFusionEngine.cs" />
     <Compile Include="Peripherals\DMA\EOSS3_SystemDMA.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
