[#16101] Prevent manual assignment of constructor attributes of Machine type

--- a/src/Emulator/Main/Tests/UnitTests/UnitTests.csproj
+++ b/src/Emulator/Main/Tests/UnitTests/UnitTests.csproj
@@ -94,6 +94,7 @@
     <Compile Include="AdHocCompilerTests.cs" />
     <Compile Include="TypeExtensionsCacheTests.cs" />
     <Compile Include="SimpleCacheTests.cs" />
+    <Compile Include="Mocks\MachineTestPeripheral.cs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="System" />
