[#16176] USB: Add transactions support

--- a/src/Emulator/Main/Emulator.csproj
+++ b/src/Emulator/Main/Emulator.csproj
@@ -485,6 +485,8 @@
     <Compile Include="Peripherals\USB\USBConnector.cs" />
     <Compile Include="Peripherals\Wireless\ISlipRadio.cs" />
     <Compile Include="Peripherals\Wireless\SlipRadio.cs" />
+    <Compile Include="Peripherals\USB\USBPacketId.cs" />
+    <Compile Include="Peripherals\USB\USBTransactionStage.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ItemGroup />
