--- a/src/Emulator/Peripherals/Peripherals.csproj
+++ b/src/Emulator/Peripherals/Peripherals.csproj
@@ -314,6 +314,7 @@
     <Compile Include="Peripherals\DMA\EOSS3_SystemDMABridge.cs" />
     <Compile Include="Peripherals\Sensors\ADXL345.cs" />
     <Compile Include="Peripherals\Miscellaneous\Messible.cs" />
+    <Compile Include="Peripherals\USB\ValentyUSB_EPTRI.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ProjectExtensions>
