[#13497] riscv: Add model for representing a custom CSR

--- a/src/Emulator/Cores/cores-riscv.csproj
+++ b/src/Emulator/Cores/cores-riscv.csproj
@@ -51,6 +51,7 @@
     <Compile Include="RiscV\PrivilegeLevel.cs" />
     <Compile Include="RiscV\Minerva.cs" />
     <Compile Include="RiscV\Ri5cy.cs" />
+    <Compile Include="RiscV\SimpleCSR.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="RiscV\RiscV32Registers.tt">
