--- a/src/Emulator/Peripherals/Peripherals.csproj
+++ b/src/Emulator/Peripherals/Peripherals.csproj
@@ -306,6 +306,10 @@
     <Compile Include="Peripherals\GPIOPort\CC2538_GPIO.cs" />
     <Compile Include="Peripherals\Miscellaneous\LiteX_SoC_Controller.cs" />
     <Compile Include="Peripherals\SPI\EOSS3_SPIMaster.cs" />
+    <Compile Include="Peripherals\UART\K6xF_UART.cs" />
+    <Compile Include="Peripherals\Miscellaneous\K6xF_MCG.cs" />
+    <Compile Include="Peripherals\Miscellaneous\K6xF_RNG.cs" />
+    <Compile Include="Peripherals\Network\K6xF_Ethernet.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ProjectExtensions>
