[#19375] Rename existing PolarFire SoC models

--- a/src/Emulator/Peripherals/Peripherals.csproj
+++ b/src/Emulator/Peripherals/Peripherals.csproj
@@ -47,12 +47,12 @@
     <Compile Include="Peripherals\Timers\EFR32_Timer.cs" />
     <Compile Include="Peripherals\Timers\LiteX_CPUTimer.cs" />
     <Compile Include="Peripherals\Timers\LiteX_Timer.cs" />
-    <Compile Include="Peripherals\USB\PSE_USB.cs" />
+    <Compile Include="Peripherals\USB\MPFS_USB.cs" />
     <Compile Include="Peripherals\USB\USBPendrive.cs" />
-    <Compile Include="Peripherals\Timers\PSE_RTC.cs" />
-    <Compile Include="Peripherals\Timers\PSE_Watchdog.cs" />
-    <Compile Include="Peripherals\SD\PSE_SDController.cs" />
-    <Compile Include="Peripherals\SPI\PSE_QSPI.cs" />
+    <Compile Include="Peripherals\Timers\MPFS_RTC.cs" />
+    <Compile Include="Peripherals\Timers\MPFS_Watchdog.cs" />
+    <Compile Include="Peripherals\SD\MPFS_SDController.cs" />
+    <Compile Include="Peripherals\SPI\MPFS_QSPI.cs" />
     <Compile Include="Peripherals\SPI\CC2538_SSI.cs" />
     <Compile Include="Peripherals\SPI\Micron_MT25Q.cs" />
     <Compile Include="Peripherals\MTD\CFIFlash.cs" />
@@ -66,7 +66,7 @@
     <Compile Include="Peripherals\MTD\ISPIFlash.cs" />
     <Compile Include="Peripherals\MTD\DummySPIFlash.cs" />
     <Compile Include="Peripherals\Miscellaneous\LED.cs" />
-    <Compile Include="Peripherals\Miscellaneous\PSE_Sysreg.cs" />
+    <Compile Include="Peripherals\Miscellaneous\MPFS_Sysreg.cs" />
     <Compile Include="Peripherals\Memory\ArrayMemory.cs" />
     <Compile Include="Peripherals\Memory\ArrayMemoryWithReadonlys.cs" />
     <Compile Include="Peripherals\Miscellaneous\EmulatorController.cs" />
@@ -77,7 +77,7 @@
     <Compile Include="Peripherals\IRQControllers\EXTI.cs" />
     <Compile Include="Peripherals\DMA\STM32DMA.cs" />
     <Compile Include="Peripherals\DMA\UDMA.cs" />
-    <Compile Include="Peripherals\DMA\PSE_PDMA.cs" />
+    <Compile Include="Peripherals\DMA\MPFS_PDMA.cs" />
     <Compile Include="Peripherals\DMA\STM32LDMA.cs" />
     <Compile Include="Peripherals\Miscellaneous\ArmSysCtl.cs" />
     <Compile Include="Peripherals\DMA\OmapDma.cs" />
@@ -121,7 +121,7 @@
     <Compile Include="Peripherals\USBDeprecated\USBSetupPacket.cs" />
     <Compile Include="Peripherals\USBDeprecated\PortStatusAndControlRegisterChanges.cs" />
     <Compile Include="Peripherals\PCI\VersatilePCI.cs" />
-    <Compile Include="Peripherals\PCI\PSE_PCIe.cs" />
+    <Compile Include="Peripherals\PCI\MPFS_PCIe.cs" />
     <Compile Include="Peripherals\PCI\PCIeMemory.cs" />
     <Compile Include="Peripherals\SPI\FakeEfmSPITransmitter.cs" />
     <Compile Include="Peripherals\UART\LEUART.cs" />
@@ -144,7 +144,7 @@
     <Compile Include="Peripherals\USBDeprecated\IUSBHubBase.cs" />
     <Compile Include="Peripherals\USBDeprecated\USBPacket.cs" />
     <Compile Include="Peripherals\CAN\STMCAN.cs" />
-    <Compile Include="Peripherals\CAN\PSE_CAN.cs" />
+    <Compile Include="Peripherals\CAN\MPFS_CAN.cs" />
     <Compile Include="Peripherals\USBDeprecated\EHCIHostController.cs" />
     <Compile Include="Peripherals\Timers\TegraUsecTimer.cs" />
     <Compile Include="Peripherals\I2C\TegraI2CController.cs" />
@@ -277,11 +277,11 @@
     <Compile Include="Peripherals\Miscellaneous\SiLabs\DeviceInformation.cs" />
     <Compile Include="Peripherals\Miscellaneous\SiLabs\EFR32_GPCRC.cs" />
     <Compile Include="Peripherals\Network\CadenceGEM.cs" />
-    <Compile Include="Peripherals\GPIOPort\PSE_GPIO.cs" />
-    <Compile Include="Peripherals\MTD\PSE_eNVM.cs" />
-    <Compile Include="Peripherals\SPI\PSE_SPI.cs" />
-    <Compile Include="Peripherals\Timers\PSE_Timer.cs" />
-    <Compile Include="Peripherals\I2C\PSE_I2C.cs" />
+    <Compile Include="Peripherals\GPIOPort\MPFS_GPIO.cs" />
+    <Compile Include="Peripherals\MTD\MPFS_eNVM.cs" />
+    <Compile Include="Peripherals\SPI\MPFS_SPI.cs" />
+    <Compile Include="Peripherals\Timers\MPFS_Timer.cs" />
+    <Compile Include="Peripherals\I2C\MPFS_I2C.cs" />
     <Compile Include="Peripherals\USB\USBMouse.cs" />
     <Compile Include="Peripherals\Miscellaneous\STM32F4_RNG.cs" />
     <Compile Include="Peripherals\UART\Murax_UART.cs" />
