--- a/src/Emulator/Peripherals/Peripherals.csproj
+++ b/src/Emulator/Peripherals/Peripherals.csproj
@@ -317,6 +317,7 @@
     <Compile Include="Peripherals\DMA\EOSS3_SystemDMABridge.cs" />
     <Compile Include="Peripherals\Sensors\ADXL345.cs" />
     <Compile Include="Peripherals\SD\LiteSDCard.cs" />
+    <Compile Include="Peripherals\Sensors\PAC1934.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ProjectExtensions>
