--- a/src/Emulator/Peripherals/Peripherals.csproj
+++ b/src/Emulator/Peripherals/Peripherals.csproj
@@ -322,6 +322,7 @@
     <Compile Include="Peripherals\Sound\LiteX_I2S_Master.cs" />
     <Compile Include="Peripherals\Sound\LiteX_I2S_Slave.cs" />
     <Compile Include="Peripherals\UART\K6xF_UART.cs" />
+    <Compile Include="Peripherals\Miscellaneous\K6xF_MCG.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ProjectExtensions>
