--- a/src/Emulator/Main/Emulator.csproj
+++ b/src/Emulator/Main/Emulator.csproj
@@ -486,6 +486,7 @@
     <Compile Include="Peripherals\Wireless\SlipRadio.cs" />
     <Compile Include="Sound\PCMEncoder.cs" />
     <Compile Include="Sound\PCMDecoder.cs" />
+    <Compile Include="Utilities\IntegerRankExtensions.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ItemGroup />
