--- a/src/Emulator/Peripherals/Peripherals.csproj
+++ b/src/Emulator/Peripherals/Peripherals.csproj
@@ -332,6 +332,7 @@
     <Compile Include="Peripherals\Miscellaneous\K6xF_SIM.cs" />
     <Compile Include="Peripherals\UART\NRF52840_UART.cs" />
     <Compile Include="Peripherals\ATAPI\ATAPI.cs" />
+    <Compile Include="Peripherals\ATAPI\CDROM.cs" />
     <Compile Include="Peripherals\Miscellaneous\STM32F4_RCC.cs" />
     <Compile Include="Peripherals\Timers\NRF52840_RTC.cs" />
   </ItemGroup>
