[#21158] BaseRiscV: Enable to control the CSR validation level from monitor

--- a/src/Emulator/Cores/cores-riscv.csproj
+++ b/src/Emulator/Cores/cores-riscv.csproj
@@ -52,6 +52,7 @@
     <Compile Include="RiscV\Minerva.cs" />
     <Compile Include="RiscV\Ri5cy.cs" />
     <Compile Include="RiscV\SimpleCSR.cs" />
+    <Compile Include="RiscV\CSRValidationLevel.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="RiscV\RiscV32Registers.tt">
