[#21296] Add TimeoutEvent helper class

--- a/src/Emulator/Main/Emulator.csproj
+++ b/src/Emulator/Main/Emulator.csproj
@@ -489,6 +489,7 @@
     <Compile Include="Utilities\IntegerRankExtensions.cs" />
     <Compile Include="Logging\Backends\MemoryBackend.cs" />
     <Compile Include="Utilities\SafeStringBuilder.cs" />
+    <Compile Include="Utilities\TimeoutEvent.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ItemGroup />
