[GH#130] GPIO Port: Add support to NXP LPC43xx
This commit adds the GPIO port of LPC 43xx microcontrollers
which are used in EDU-CIAA-NXP board

--- a/src/Emulator/Peripherals/Test/PeripheralsTests/PeripheralsTests.csproj
+++ b/src/Emulator/Peripherals/Test/PeripheralsTests/PeripheralsTests.csproj
@@ -49,6 +49,7 @@
     <Compile Include="BMC050Test.cs" />
     <Compile Include="STMCANTest.cs" />
     <Compile Include="GailserUARTTests.cs" />
+    <Compile Include="LPC43xx_GPIO_Test.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ItemGroup>
