--- a/src/Emulator/Peripherals/Peripherals.csproj
+++ b/src/Emulator/Peripherals/Peripherals.csproj
@@ -335,6 +335,7 @@
     <Compile Include="Peripherals\Miscellaneous\STM32F4_RCC.cs" />
     <Compile Include="Peripherals\Miscellaneous\NRF82540_CLOCK.cs" />
     <Compile Include="Peripherals\Timers\NRF52840_RTC.cs" />
+    <Compile Include="Peripherals\GPIOPort\LPC43xx_GPIO.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ProjectExtensions>
