[#21999] tests: Switch to NUnit3

--- a/src/Emulator/Extensions/MonitorTests/MonitorTests.csproj
+++ b/src/Emulator/Extensions/MonitorTests/MonitorTests.csproj
@@ -34,7 +34,7 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="nunit.framework">
-      <HintPath>..\..\..\..\..\..\lib\resources\tools\nunit.framework.dll</HintPath>
+      <HintPath>..\..\..\..\..\..\lib\resources\tools\nunit3\nunit.framework.dll</HintPath>
     </Reference>
   </ItemGroup>
   <ItemGroup>
