--- a/src/Emulator/Peripherals/Test/PeripheralsTests/PeripheralsTests.csproj
+++ b/src/Emulator/Peripherals/Test/PeripheralsTests/PeripheralsTests.csproj
@@ -37,7 +37,7 @@
       <HintPath>..\..\..\..\..\..\..\lib\resources\libraries\Moq.dll</HintPath>
     </Reference>
     <Reference Include="nunit.framework">
-      <HintPath>..\..\..\..\..\..\..\lib\resources\tools\nunit.framework.dll</HintPath>
+      <HintPath>..\..\..\..\..\..\..\lib\resources\tools\nunit3\nunit.framework.dll</HintPath>
     </Reference>
   </ItemGroup>
   <ItemGroup>
