[#21999] MonitorTests: Add reference to the Renode project
It is required for IronPython to import all packages.
Without this fix running this test alone on a fresh compilation fails.

--- a/src/Emulator/Extensions/MonitorTests/MonitorTests.csproj
+++ b/src/Emulator/Extensions/MonitorTests/MonitorTests.csproj
@@ -44,6 +44,10 @@
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ItemGroup>
+    <ProjectReference Include="..\..\..\..\..\..\src\Renode\Renode.csproj">
+      <Project>{5A7EF2B0-889A-488A-B296-97AF33791772}</Project>
+      <Name>Renode</Name>
+    </ProjectReference>
     <ProjectReference Include="..\Extensions.csproj">
       <Project>{4C636FAF-4650-4088-8EA8-2FCCC225E9CF}</Project>
       <Name>Extensions</Name>
