[#22001] NRF52840: Add GPIO Tasks and Events controller model

--- a/src/Emulator/Peripherals/Peripherals.csproj
+++ b/src/Emulator/Peripherals/Peripherals.csproj
@@ -338,6 +338,7 @@
     <Compile Include="Peripherals\GPIOPort\LPC43xx_GPIO.cs" />
     <Compile Include="Peripherals\Miscellaneous\SevenSegmentsDisplay.cs" />
     <Compile Include="Peripherals\GPIOPort\NRF52840_GPIO.cs" />
+    <Compile Include="Peripherals\GPIOPort\NRF52840_GPIOTasksEvents.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ProjectExtensions>
