[#22007] NRF52840: Add SPI controller model

--- a/src/Emulator/Peripherals/Peripherals.csproj
+++ b/src/Emulator/Peripherals/Peripherals.csproj
@@ -339,6 +339,7 @@
     <Compile Include="Peripherals\Miscellaneous\SevenSegmentsDisplay.cs" />
     <Compile Include="Peripherals\GPIOPort\NRF52840_GPIO.cs" />
     <Compile Include="Peripherals\GPIOPort\NRF52840_GPIOTasksEvents.cs" />
+    <Compile Include="Peripherals\SPI\NRF52840_SPI.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ProjectExtensions>
