[#22007] Add ADXL372 accelerometer model

--- a/src/Emulator/Peripherals/Peripherals.csproj
+++ b/src/Emulator/Peripherals/Peripherals.csproj
@@ -340,6 +340,7 @@
     <Compile Include="Peripherals\GPIOPort\NRF52840_GPIO.cs" />
     <Compile Include="Peripherals\GPIOPort\NRF52840_GPIOTasksEvents.cs" />
     <Compile Include="Peripherals\SPI\NRF52840_SPI.cs" />
+    <Compile Include="Peripherals\Sensors\ADXL372.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ProjectExtensions>
