[#22003] Add NRF52840 I2C controller

--- a/src/Emulator/Peripherals/Peripherals.csproj
+++ b/src/Emulator/Peripherals/Peripherals.csproj
@@ -341,6 +341,7 @@
     <Compile Include="Peripherals\GPIOPort\NRF52840_GPIOTasksEvents.cs" />
     <Compile Include="Peripherals\SPI\NRF52840_SPI.cs" />
     <Compile Include="Peripherals\Sensors\ADXL372.cs" />
+    <Compile Include="Peripherals\I2C\NRF52840_I2C.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ProjectExtensions>
