[#27433] virtio: Initial stub

--- a/src/Emulator/Peripherals/Peripherals.csproj
+++ b/src/Emulator/Peripherals/Peripherals.csproj
@@ -395,6 +395,7 @@
     <Compile Include="Peripherals\Timers\IMXRT_PWM.cs" />
     <Compile Include="Peripherals\Miscellaneous\MPFS_SystemServices.cs" />
     <Compile Include="Peripherals\Timers\NRF52840_Watchdog.cs" />
+    <Compile Include="Peripherals\Storage\VirtIOBlockDevice.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ProjectExtensions>
