--- a/src/Emulator/Peripherals/Peripherals.csproj
+++ b/src/Emulator/Peripherals/Peripherals.csproj
@@ -325,6 +325,7 @@
     <Compile Include="Peripherals\Sound\LiteX_I2S_Master.cs" />
     <Compile Include="Peripherals\Sound\LiteX_I2S_Slave.cs" />
     <Compile Include="Peripherals\Sound\NRF52840_I2S.cs" />
+    <Compile Include="Peripherals\Sound\NRF52840_PDM.cs" />
     <Compile Include="Peripherals\UART\K6xF_UART.cs" />
     <Compile Include="Peripherals\Miscellaneous\K6xF_MCG.cs" />
     <Compile Include="Peripherals\Miscellaneous\K6xF_RNG.cs" />
