[#22010] Add NRF52840_Timer model

--- a/src/Emulator/Peripherals/Peripherals.csproj
+++ b/src/Emulator/Peripherals/Peripherals.csproj
@@ -347,6 +347,7 @@
     <Compile Include="Peripherals\Sensors\ST_I2CSensorBase.cs" />
     <Compile Include="Peripherals\Sensors\LSM330_Accelerometer.cs" />
     <Compile Include="Peripherals\Sensors\LSM330_Gyroscope.cs" />
+    <Compile Include="Peripherals\Timers\NRF52840_Timer.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ProjectExtensions>
