--- a/src/Emulator/Peripherals/Peripherals.csproj
+++ b/src/Emulator/Peripherals/Peripherals.csproj
@@ -342,6 +342,7 @@
     <Compile Include="Peripherals\SPI\NRF52840_SPI.cs" />
     <Compile Include="Peripherals\Sensors\ADXL372.cs" />
     <Compile Include="Peripherals\I2C\NRF52840_I2C.cs" />
+    <Compile Include="Peripherals\Sensors\LSM9DS1_IMU.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ProjectExtensions>
