--- a/src/Emulator/Cores/cores-riscv.csproj
+++ b/src/Emulator/Cores/cores-riscv.csproj
@@ -57,6 +57,7 @@
     <Compile Include="RiscV\RiscVInstructionPythonEngine.cs" />
     <Compile Include="RiscV\RiscVCsrPythonEngine.cs" />
     <Compile Include="RiscV\CV32E40P.cs" />
+    <Compile Include="RiscV\PULP_InterruptController.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="RiscV\RiscV32Registers.tt">
