[#23225] OpenTitan: Add IbexUART

--- a/src/Emulator/Peripherals/Peripherals.csproj
+++ b/src/Emulator/Peripherals/Peripherals.csproj
@@ -358,6 +358,7 @@
     <Compile Include="Peripherals\Timers\PULP_Timer.cs" />
     <Compile Include="Peripherals\UART\PULP_uDMA_UART.cs" />
     <Compile Include="Peripherals\GPIOPort\PULP_APB_GPIO.cs" />
+    <Compile Include="Peripherals\UART\IbexUART.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ProjectExtensions>
